@@ -291,7 +291,6 @@ else {
 		'editable' => true,
 		'output' => array('sysmapid', 'name', 'width', 'height'),
 		'sortfield' => $sortField,
-		'sortorder' => $sortOrder,
 		'limit' => $config['search_limit'] + 1
 	));
 	order_result($data['maps'], $sortField, $sortOrder);
