@@ -29,6 +29,7 @@ struct	st_logfile
 	int		mtime;		/* st_mtime from stat() */
 	int		md5size;	/* size of the initial part for which the md5 sum is calculated */
 	int		seq;		/* number in processing order */
+	int		retry;
 	int		incomplete;	/* 0 - the last record ends with a newline, 1 - the last record contains */
 					/* no newline at the end */
 	zbx_uint64_t	dev;		/* ID of device containing file */
